--- a/AdvaMACSystem/AdvaMACSystemRes.resx
+++ b/AdvaMACSystem/AdvaMACSystemRes.resx
@@ -142,4 +142,10 @@
   <data name="yellowbar" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\yellowbar.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="border" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\border.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="border_Disable" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\border_Disable.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
