--- a/AdvaMACSystem/AdvaMACSystemRes.resx
+++ b/AdvaMACSystem/AdvaMACSystemRes.resx
@@ -151,4 +151,22 @@
   <data name="pump" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\pump.bmp;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="MAC_disable" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\MAC_disable.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="MAC_down" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\MAC_down.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="MAC_up" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\MAC_up.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="pumpborder" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\pumpborder.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="pumpborder_checked" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\pumpborder_checked.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="pumpborder_disable" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\pumpborder_disable.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
