>协议解析时的名字更新 >主界面的初步布局

--- a/AdvaMACSystem/mainForm.resx
+++ b/AdvaMACSystem/mainForm.resx
@@ -121,6 +121,36 @@
     <value>17, 17</value>
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        R0lGODlhlgBkAIcAAAAAAIgAAACIAIiIAAAAiIgAiACIiIiIiMzqzLDX/y1DtS1D/y1lAC1lWi1ltS1l
+        /y2HAC2HWi2HtS2H/y2pAC2pWi2ptS2p/y3LAC3LWi3LtS3L/y3tAC3tWi3ttS3t/y3/AC3/Wi3/tS3/
+        /1oAAFoAWloAtVoA/1ohAFohWlohtVoh/1pDAFpDWlpDtVpD/1plAFplWlpltVpl/1qHAFqHWlqHtVqH
+        /1qpAFqpWlqptVqp/1rLAFrLWlrLtVrL/1rtAFrtWlrttVrt/1r/AFr/Wlr/tVr//4cAAIcAWocAtYcA
+        /4chAIchWochtYch/4dDAIdDWodDtYdD/4dlAIdlWodltYdl/4eHAIeHWoeHtYeH/4epAIepWoeptYep
+        /4fLAIfLWofLtYfL/4ftAIftWofttYft/4f/AIf/Wof/tYf//7UAALUAWrUAtbUA/7UhALUhWrUhtbUh
+        /7VDALVDWrVDtbVD/7VlALVlWrVltbVl/7WHALWHWrWHtbWH/7WpALWpWrWptbWp/7XLALXLWrXLtbXL
+        /7XtALXtWrXttbXt/7X/ALX/WrX/tbX//+EAAOEAWuEAteEA/+EhAOEhWuEhteEh/+FDAOFDWuFDteFD
+        /+FlAOFlWuFlteFl/+GHAOGHWuGHteGH/+GpAOGpWuGpteGp/+HLAOHLWuHLteHL/+HtAOHtWuHtteHt
+        /+H/AOH/WuH/teH///8AWv8Atf8hAP8hWv8htf8h//9DAP9DWv9Dtf9D//9lAP9lWv9ltf9l//+HAP+H
+        Wv+Htf+H//+pAP+pWv+ptf+p///LAP/LWv/Ltf/L///tAP/tWv/ttf/t////Wv//tdnZ///Z/zb//2z/
+        /6P//9n//wCHAACHWgCHtQCH/wCpAACpWgCptQCp/wDLAADLWgDLtQDL/wDtAADtWgDttQDt/wD/WgD/
+        tS0AAC0AWi0AtS0A/y0hAC0hWi0htS0h/y1DAC1DWv///6qqroiIiP8AAAD/AP//AAAA//8A/wD/////
+        /yH/C05FVFNDQVBFMi4wAwEBAAAh+QQAAAAAACwAAAAAlgBkAAAI/wCj1BlIsKDBgwgTKlzIsKHDhxAj
+        NhRIqaLFixgzatzIsaPHjyBDihz5cSDJkyhTqlzJcqPJljBjypxJ8iXNmzhztrSpMySmnkBn8gzKEZOw
+        n0STphyqlBImYz+NQW1KVSTTpsacKXNmrKrXknW+VsS0VetRsWgvXh2JCSlKTmWdceWUNu1akZyEpSQr
+        l2tbt3W93g0pTFlKYUc5OdMb2G5YlXwBozRGtzHawR8xyWUMWbJlqpg9CpNr+KbnzzlDd4x7euVTpG1R
+        p378tu/im8qgcpoq+6bqjaP7dqWZdevw3jR/a4yrtTVKTHD7VkYulLbGvIiza2c+V7v26SCf2v++Tb16
+        R/Hj06sfrwx8Zk55SSvjXH6ndeDc168/+3xxW07O1TeSanzpt157rvEmYEy/GWVgegru5d6CLClHSXQP
+        IkghahY6lZV+ygS44VcdUhLceseNaFmJ+dkWooqfdajZg/TB6BhJJ/bFXYosxWbjUvd9xFx76JEmokiI
+        /QgkW3EpmGONKhlTmpI1BdlRcPNlhCGPJBmF2FbZHUllRRYWN+FYxYnJUWHjQTmmS1ZuRFaEGo12JpPS
+        vRmScnmF1KdrrOkJUok+sQQXfFkK6hGhRPFnlKKLxgnpiIyaNumSdf15aZVi7QZgbpueVClMxXEVKqdi
+        FZibL2qGOmpLiumDSOepcKaqzK3k0TqopEH5cpRmbuqq0asxJSksWIH5eGxHxC6bVLPOBgVttD1NS+1s
+        15ZnbbbJ8crtZd5+S2K44la1bbn2oRsjueo+y2670r4Lb7XyzoutveDim6++4/Lbr7/m1gswTOcOHKnB
+        TRWMcK0LE6Vwwxg9DLFFEk9MScUTYwxAscYNc7ywxwiDbLDIA5MMsMn+osyvyvqyjK/L9sI8r8zw0tyu
+        zerijK7O5fIsrs/f1iGQREQXbfTRSCeNUBQBAQA7
+</value>
+  </data>
   <data name="LabelCurError.BackImg" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAAK/INwWK6QAAABl0RVh0U29m
@@ -244,34 +274,39 @@
         HyxFWyO6nir3AAAAAElFTkSuQmCC
 </value>
   </data>
-  <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="imageLabel1.BackImg" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        R0lGODlhlgBkAIcAAAAAAIgAAACIAIiIAAAAiIgAiACIiIiIiMzqzLDX/y1DtS1D/y1lAC1lWi1ltS1l
-        /y2HAC2HWi2HtS2H/y2pAC2pWi2ptS2p/y3LAC3LWi3LtS3L/y3tAC3tWi3ttS3t/y3/AC3/Wi3/tS3/
-        /1oAAFoAWloAtVoA/1ohAFohWlohtVoh/1pDAFpDWlpDtVpD/1plAFplWlpltVpl/1qHAFqHWlqHtVqH
-        /1qpAFqpWlqptVqp/1rLAFrLWlrLtVrL/1rtAFrtWlrttVrt/1r/AFr/Wlr/tVr//4cAAIcAWocAtYcA
-        /4chAIchWochtYch/4dDAIdDWodDtYdD/4dlAIdlWodltYdl/4eHAIeHWoeHtYeH/4epAIepWoeptYep
-        /4fLAIfLWofLtYfL/4ftAIftWofttYft/4f/AIf/Wof/tYf//7UAALUAWrUAtbUA/7UhALUhWrUhtbUh
-        /7VDALVDWrVDtbVD/7VlALVlWrVltbVl/7WHALWHWrWHtbWH/7WpALWpWrWptbWp/7XLALXLWrXLtbXL
-        /7XtALXtWrXttbXt/7X/ALX/WrX/tbX//+EAAOEAWuEAteEA/+EhAOEhWuEhteEh/+FDAOFDWuFDteFD
-        /+FlAOFlWuFlteFl/+GHAOGHWuGHteGH/+GpAOGpWuGpteGp/+HLAOHLWuHLteHL/+HtAOHtWuHtteHt
-        /+H/AOH/WuH/teH///8AWv8Atf8hAP8hWv8htf8h//9DAP9DWv9Dtf9D//9lAP9lWv9ltf9l//+HAP+H
-        Wv+Htf+H//+pAP+pWv+ptf+p///LAP/LWv/Ltf/L///tAP/tWv/ttf/t////Wv//tdnZ///Z/zb//2z/
-        /6P//9n//wCHAACHWgCHtQCH/wCpAACpWgCptQCp/wDLAADLWgDLtQDL/wDtAADtWgDttQDt/wD/WgD/
-        tS0AAC0AWi0AtS0A/y0hAC0hWi0htS0h/y1DAC1DWv///6qqroiIiP8AAAD/AP//AAAA//8A/wD/////
-        /yH/C05FVFNDQVBFMi4wAwEBAAAh+QQAAAAAACwAAAAAlgBkAAAI/wCj1BlIsKDBgwgTKlzIsKHDhxAj
-        NhRIqaLFixgzatzIsaPHjyBDihz5cSDJkyhTqlzJcqPJljBjypxJ8iXNmzhztrSpMySmnkBn8gzKEZOw
-        n0STphyqlBImYz+NQW1KVSTTpsacKXNmrKrXknW+VsS0VetRsWgvXh2JCSlKTmWdceWUNu1akZyEpSQr
-        l2tbt3W93g0pTFlKYUc5OdMb2G5YlXwBozRGtzHawR8xyWUMWbJlqpg9CpNr+KbnzzlDd4x7euVTpG1R
-        p378tu/im8qgcpoq+6bqjaP7dqWZdevw3jR/a4yrtTVKTHD7VkYulLbGvIiza2c+V7v26SCf2v++Tb16
-        R/Hj06sfrwx8Zk55SSvjXH6ndeDc168/+3xxW07O1TeSanzpt157rvEmYEy/GWVgegru5d6CLClHSXQP
-        IkghahY6lZV+ygS44VcdUhLceseNaFmJ+dkWooqfdajZg/TB6BhJJ/bFXYosxWbjUvd9xFx76JEmokiI
-        /QgkW3EpmGONKhlTmpI1BdlRcPNlhCGPJBmF2FbZHUllRRYWN+FYxYnJUWHjQTmmS1ZuRFaEGo12JpPS
-        vRmScnmF1KdrrOkJUok+sQQXfFkK6hGhRPFnlKKLxgnpiIyaNumSdf15aZVi7QZgbpueVClMxXEVKqdi
-        FZibL2qGOmpLiumDSOepcKaqzK3k0TqopEH5cpRmbuqq0asxJSksWIH5eGxHxC6bVLPOBgVttD1NS+1s
-        15ZnbbbJ8crtZd5+S2K44la1bbn2oRsjueo+y2670r4Lb7XyzoutveDim6++4/Lbr7/m1gswTOcOHKnB
-        TRWMcK0LE6Vwwxg9DLFFEk9MScUTYwxAscYNc7ywxwiDbLDIA5MMsMn+osyvyvqyjK/L9sI8r8zw0tyu
-        zerijK7O5fIsrs/f1iGQREQXbfTRSCeNUBQBAQA7
+        R0lGODlhUAAgAIf/AL3l+H19fZiYmI+Pj4qKioWFhb3W6j80c3Z2dnR0dHFxcVhYWGxsbGpqalVVVVPD
+        8IeHh1ZWVnl5eXfO82VlZWBgYF5eXlxcXFpaWgSo6qra9cvp+NLr+ub0/NXt+Z+fn/D4/aDW9JbS80x8
+        oeDw+jBDivr8/rvV6kC974vP8vj4+LW1tbi4uM3NzdXV1cjIyNPT0+3t7cXFxfb29uvr69DQ0N3d3bq6
+        uvPz8/Dw8Ojo6MLCwsDAwL29vcrKyuXl5eDg4OPj49jY2Nvb23/R86mpqYKCgqCgoJWVlZeXl7a2tp6e
+        nnt7e4yMjImJiZqampCQkHXN8nNzczBWlTRIi6Ojo39/f7Ozs8HBwWdnZ+Tk5OLi4tLS0qurq7u7u5KS
+        kubm5o2NjS5cmoODgzc9hDVEiToyfIGBgaenp97e3jZBhmrK8YjQ87y8vDFSky9ZlzNLjjg6gYiIiNvw
+        +jJPkJOTkzk2f4CAgIXQ88Ln+EEpZIPQ80W06NTU1Blpqrm5uUU5YK/N5c7s+U+d1qvF4SNrrvHx8drx
+        ++bz+8PDw4DQ82aEm8vLy2hoaJvb9kAnaZaWlqampjM3li1gnGDG8WXJ8ZzX9XSs2tXu+j8ebj8sbIy2
+        3mSezJfU9I7V9B1xwVt7mKbc9lWUxzYniCyr5iWz7DG47Th+uxWEz9fX13PL8nHN86re9yRko0mCvbzT
+        6EG976bF48/i8TyBxoKu2GB3kGen2UC87q+vr1FRUU9PTxml5TsndY3S852+4BSu65i733iJl6Ha9aPd
+        9i9RqNfu+UQ4WYrP8ovQ863f9sve7sbb7fX19UZBTvLy8lui2JGRkW/L8kiZ1cfHx+np6W2EltPt+bS0
+        tOn1+0pDXU9NVMnJydnw+6zJ5SpupkNplkpvlm9vb7GxsVDB76DA4aPD4qnH5Dtksur3/XaDj3aGlEU8
+        aZ7b9cjp+GNjY7Te9tzw+77j98jn+KDb9ZXY9arf9orU9MDm+K6urrXi9/39/ZSUlPv7+7CwsLKysv//
+        /yH/C05FVFNDQVBFMi4wAwEBAAAh+QQBAAD/ACwAAAAAUAAgAAAI/wD/CfznbAeaOvgSKlzIsKHDhxAj
+        QhRwxIuWgRhfQPlDTZ/HjyBDihxJsqTJkzmmJcGiAiMLJGD4yZxJs6bNmzhz6txJM0aVKi3/tfiiRYVR
+        o1tWfFjKtKnTp1CjSp3KtEiqo0YNHWHxTwWUPjPCzqDhpJmeTCXSql3Ltq3bt3DjluD1yJgUF2Jn6HCy
+        xccTHIBxpHFgbNSnDKZQKF7MuLHjx5AjR4aVAZWkRxFgBMaB61oXLDlC52AASNKuB4dMqF7NurXr17Bj
+        yzaBbtUvYpoWgBHtoskRLjGCX9E2ilQlEMiTK1/OvLnz59CXOyolKduH4MGNHKlBo3uYdeducf/rQL68
+        +fPo06tfzx79g1kHsnTvfmdJCx34mRyQNgGe//8ABijggAQWaOCAw/BhRgT44RfAEoz8IGEAZgzCCgcY
+        Zqjhhhx26OGHIHYIwDhmYCChhEw88UIQLFphxzOhyCPjjDTWaOONOOaoI46U2GEBiyxKIIAMQBR5Rxy2
+        CBPPkkw26eSTUEYp5ZRRRhNHBUUWiUASidjgpRFkXNLLO2SWaeaZaKap5ppspmmJImRQ4KWXCSDBwxB4
+        FqAGLapo4OefgAYq6KCEFmrooIp4okYWeOKpQB09CCFpAWVsskYvIWSq6aacdurpp6CGymkna7BTRgOS
+        ShoONF644CoEVAD/E0UUyIhg66245qrrrrz26uutvUwQRTJUMOCqqwwMwAIMzMoBhy9ERLsHG8ekYO21
+        2Gar7bbcdsstG3hES0Q+cCjALLMNDKBEDewSQAc59sQr77z01mvvvfjmiy8AdEjBLruNNHFFCwQT4EY5
+        9CSs8MIMN+zwwxBHDHEebiBAMMEUENCPDxyHMUUs84Qs8sgkl2zyySinjHI7U0jAMcfuOIHPCzQP8IY5
+        9eSs88489+zzz0AHDbQgbwRAM80VFNCFDExDIUY3+UQt9dRUV2311VhnjTUmYljBNNMWFFDEDmR/8Q0h
+        96St9tpst+3223DHDbcskxhBNtkXjBEJD3wv/1GLK3NsIPjghBdu+OGIJ6744dbQAs4+fPO9wBlV9GC5
+        EnK08socHnTu+eeghy766KSXDnoxyxSSThGW96DEAkicccPsNxyRTiEGYEPC7rz37vvvwAcv/PC8I6LM
+        KaAkQfsNTyCwzQLisCA9C0uo440ogZyg/fbcd+/99+CHL/4JBnDiRzWQrDA9CwwU8Y8CRqwgv/xFPBHM
+        CPjnr//+/Pfv//8AzN8iBICG+ckPCRdgxj/SsIAm+OOBEIygBCdIwQpa8IIYnOAHHNCDgbQhAgEoQj9G
+        SMISmvCEKEyhClfIQhKOIRdtwMg/bIAAXSRgHzjMoQ53yMMe+vCHQAwiEwccUAEuDCQgADs=
 </value>
   </data>
   <metadata name="$this.FormFactorShadowProperty" xml:space="preserve">
