--- a/AdvaMACSystem/AdvaMACSystemRes.resx
+++ b/AdvaMACSystem/AdvaMACSystemRes.resx
@@ -169,4 +169,13 @@
   <data name="pumpborder_disable" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\pumpborder_disable.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="IOblack" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\IOblack.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="IOlabel" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\IOlabel.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="IOred" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\IOred.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
