--- a/AdvaMACSystem/AdvaMACSystemRes.resx
+++ b/AdvaMACSystem/AdvaMACSystemRes.resx
@@ -178,4 +178,13 @@
   <data name="IOred" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\IOred.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Dgn_disable" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Dgn_disable.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Dgn_down" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Dgn_down.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Dgn_up" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Dgn_up.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
