>主界面布局的定型 >添加了参数几个界面的空窗体 >can通讯修改了异常

--- a/AdvaMACSystem/AdvaMACSystemRes.resx
+++ b/AdvaMACSystem/AdvaMACSystemRes.resx
@@ -187,4 +187,7 @@
   <data name="Dgn_up" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\Dgn_up.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="bk22_95" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\bk22-95.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
