--- a/AdvaMACSystem/AdvaMACSystemRes.resx
+++ b/AdvaMACSystem/AdvaMACSystemRes.resx
@@ -202,4 +202,28 @@
   <data name="input" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\input.gif;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="half_disable" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\half_disable.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="half_down" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\half_down.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="half_up" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\half_up.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="leftdown" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\leftdown.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="leftup" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\leftup.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="rightdown" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\rightdown.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="rightup" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\rightup.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Input80x40" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Input80x40.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
