--- a/AdvaMACSystem/AdvaMACSystemRes.resx
+++ b/AdvaMACSystem/AdvaMACSystemRes.resx
@@ -226,4 +226,19 @@
   <data name="Input80x40" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\Input80x40.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="fix2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\fix2.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="warning2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\warning2.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="history_64" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\history_64.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="config64" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\config64.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="settings64" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\settings64.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
