--- a/AdvaMACSystem/AdvaMACSystemRes.resx
+++ b/AdvaMACSystem/AdvaMACSystemRes.resx
@@ -253,4 +253,7 @@
   <data name="Menu_disable" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\Menu_disable.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="LightOnRed100" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\LightOnRed100.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
