--- a/AdvaMACSystem/AdvaMACSystemRes.resx
+++ b/AdvaMACSystem/AdvaMACSystemRes.resx
@@ -265,4 +265,7 @@
   <data name="LogoBack" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\LogoBack.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="estop64" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\estop64.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
