--- a/AdvaMACSystem/AdvaMACSystemRes.resx
+++ b/AdvaMACSystem/AdvaMACSystemRes.resx
@@ -268,4 +268,13 @@
   <data name="estop64" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\estop64.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Set_disable" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Set_disable.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Set_down" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Set_down.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Set_up" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Set_up.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
