--- a/AdvaMACSystem/AdvaMACSystemRes.resx
+++ b/AdvaMACSystem/AdvaMACSystemRes.resx
@@ -277,4 +277,7 @@
   <data name="Set_up" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\Set_up.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="estop64_1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\estop64_1.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
