>修正了wince下编译出错的问题

--- a/AdvaMACSystem/PageViewPara.resx
+++ b/AdvaMACSystem/PageViewPara.resx
@@ -194,4 +194,7 @@
         Ow==
 </value>
   </data>
+  <metadata name="$this.FormFactorShadowProperty" xml:space="preserve">
+    <value>WEBPAD</value>
+  </metadata>
 </root>
